initial structure for header

--- a/src/app/modules/shared/header/header.component.html
+++ b/src/app/modules/shared/header/header.component.html
@@ -1,1 +1,11 @@
-<p>header works!</p>
+<header id="header">
+  <div class="header">
+   <div class="nav-wrapper">
+    <ul class="navigation">
+     <li><a href="#">Home</a></li>
+     <li><a href="#">About</a></li>
+     <li><a href="#">Profile</a></li>
+    </ul>
+   </div>
+  </div>
+</header>
