--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -33,3 +33,6 @@ body {
   // Reset the user agent margin.
   margin: 0;
 }
+
+
+// https://www.realtimecolors.com/?colors=140709-fcf6f6-c25567-98dabf-70a5cc&fonts=Inter-Inter
