--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,81 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+:root {
+  --text: #140709;
+  --background: #fcf6f6;
+  --primary: #c25567;
+  --secondary: #98dabf;
+  --accent: #70a5cc;
+
+  /* light shades */
+  --text-50: #f8ecee;
+  --text-100: #f2d9dd;
+  --text-200: #e4b4bb;
+  --text-300: #d78e99;
+  --text-400: #ca6877;
+  --text-500: #bd4255;
+  --text-600: #973544;
+  --text-700: #712833;
+  --text-800: #4b1b22;
+  --text-900: #260d11;
+  --text-950: #130708;
+
+  --background-50: #f9ecec;
+  --background-100: #f2d9d9;
+  --background-200: #e6b3b3;
+  --background-300: #d98c8c;
+  --background-400: #cc6666;
+  --background-500: #bf4040;
+  --background-600: #993333;
+  --background-700: #732626;
+  --background-800: #4d1919;
+  --background-900: #260d0d;
+  --background-950: #130606;
+
+  --primary-50: #f8ecee;
+  --primary-100: #f1dade;
+  --primary-200: #e4b4bc;
+  --primary-300: #d68f9b;
+  --primary-400: #c96979;
+  --primary-500: #bb4458;
+  --primary-600: #963646;
+  --primary-700: #702935;
+  --primary-800: #4b1b23;
+  --primary-900: #250e12;
+  --primary-950: #130709;
+
+  --secondary-50: #ecf8f3;
+  --secondary-100: #daf1e7;
+  --secondary-200: #b4e4d0;
+  --secondary-300: #8fd6b8;
+  --secondary-400: #69c9a1;
+  --secondary-500: #44bb89;
+  --secondary-600: #36966e;
+  --secondary-700: #297052;
+  --secondary-800: #1b4b37;
+  --secondary-900: #0e251b;
+  --secondary-950: #07130e;
+
+  --accent-50: #ecf3f8;
+  --accent-100: #dae7f1;
+  --accent-200: #b4d0e4;
+  --accent-300: #8fb8d6;
+  --accent-400: #69a1c9;
+  --accent-500: #4489bb;
+  --accent-600: #366e96;
+  --accent-700: #295270;
+  --accent-800: #1b374b;
+  --accent-900: #0e1b25;
+  --accent-950: #070e13;
+}
+
+html,
+body {
+  height: 100%;
+  background-color: var(--background);
+  color: var(--text);
+}
+body {
+  margin: 0;
+  font-family: Inter, 'Helvetica Neue', sans-serif;
+}
