added attendance user table

--- a/src/app/modules/attendance-user-detail/attendance-user-detail/attendance-user-detail.component.html
+++ b/src/app/modules/attendance-user-detail/attendance-user-detail/attendance-user-detail.component.html
@@ -1,1 +1,1 @@
-<p>attendance-user-detail works!</p>
+<app-attendance-user-detail-table [dataSource]="userAttendanceDetail" [displayedColumns]="headers"></app-attendance-user-detail-table>
