--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -1,4 +1,3 @@
-
 // Include theming for Angular Material with `mat.theme()`.
 // This Sass mixin will define CSS variables that are used for styling Angular Material
 // components according to the Material 3 design spec.
@@ -6,15 +5,40 @@
 // custom components at https://material.angular.dev/guide/theming
 @use '@angular/material' as mat;
 
+:root {
+  mat-form-field {
+    --mat-sys-surface-variant: transparent;
+    @include mat.form-field-overrides(
+      (
+        container-text-font: 8px,
+        subscript-text-font: 8px,
+        outlined-label-text-font: 8px,
+        filled-label-text-font: 8px,
+      )
+    );
+    font-family: var(--mat-form-field-container-text-font, var(--mat-sys-body-small-font) Roboto);
+    line-height: var(--mat-form-field-container-text-line-height,var(--mat-sys-body-small-line-height));
+    font-size: var(--mat-form-field-container-text-size, var(--mat-sys-body-small-size));
+    letter-spacing: var(--mat-form-field-container-text-tracking, var(--mat-sys-body-small-tracking));
+    font-weight: var(--mat-form-field-container-text-weight, var(--mat-sys-body-small-weight));
+
+    .mat-mdc-form-field-focus-overlay {
+      background-color: transparent;
+    }
+  }
+}
+
 html {
-  @include mat.theme((
-    color: (
-      primary: mat.$rose-palette,
-      tertiary: mat.$red-palette,
-    ),
-    typography: Roboto,
-    density: 0,
-  ));
+  @include mat.theme(
+    (
+      color: (
+        primary: mat.$rose-palette,
+        tertiary: mat.$red-palette,
+      ),
+      typography: Roboto,
+      density: 0,
+    )
+  );
 }
 
 body {
@@ -34,5 +58,13 @@ body {
   margin: 0;
 }
 
+.snackbar-override {
+  .mat-mdc-snackbar-surface {
+    background-color: transparent;
+    .mdc-snackbar__label {
+      padding: 0;
+    }
+  }
+}
 
 // https://www.realtimecolors.com/?colors=140709-fcf6f6-c25567-98dabf-70a5cc&fonts=Inter-Inter
