initial commit in shared datepicker

--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -8,6 +8,16 @@
 :root {
   mat-form-field {
     --mat-sys-surface-variant: transparent;
+
+    font-family: var(--mat-form-field-container-text-font, var(--mat-sys-body-small-font) Roboto);
+    line-height: var(--mat-form-field-container-text-line-height,var(--mat-sys-body-small-line-height));
+    font-size: var(--mat-form-field-container-text-size, var(--mat-sys-body-small-size));
+    letter-spacing: var(--mat-form-field-container-text-tracking, var(--mat-sys-body-small-tracking));
+    font-weight: var(--mat-form-field-container-text-weight, var(--mat-sys-body-small-weight));
+    height: 70px;
+    margin-bottom: -22px;
+    
+    // Input override
     @include mat.form-field-overrides(
       (
         container-text-font: 8px,
@@ -16,14 +26,17 @@
         filled-label-text-font: 8px,
       )
     );
-    font-family: var(--mat-form-field-container-text-font, var(--mat-sys-body-small-font) Roboto);
-    line-height: var(--mat-form-field-container-text-line-height,var(--mat-sys-body-small-line-height));
-    font-size: var(--mat-form-field-container-text-size, var(--mat-sys-body-small-size));
-    letter-spacing: var(--mat-form-field-container-text-tracking, var(--mat-sys-body-small-tracking));
-    font-weight: var(--mat-form-field-container-text-weight, var(--mat-sys-body-small-weight));
-
     .mat-mdc-form-field-focus-overlay {
       background-color: transparent;
+    }
+
+    // Datepicker override
+    .mdc-text-field--filled .mdc-floating-label {
+      font-family: var(--mat-form-field-container-text-font, var(--mat-sys-body-small-font) Roboto);
+      line-height: var(--mat-form-field-container-text-line-height,var(--mat-sys-body-small-line-height));
+      font-size: var(--mat-form-field-container-text-size, var(--mat-sys-body-small-size));
+      letter-spacing: var(--mat-form-field-container-text-tracking, var(--mat-sys-body-small-tracking));
+      font-weight: var(--mat-form-field-container-text-weight, var(--mat-sys-body-small-weight));
     }
   }
 }
