update on side filter

--- a/src/app/modules/shared/side-filter/side-filter.component.html
+++ b/src/app/modules/shared/side-filter/side-filter.component.html
@@ -1,4 +1,6 @@
-<div class="h3-title underlined">Filters</div>
 <div class="filter-container">
- <app-input></app-input>
+  <div class="h3-title underlined">Filters</div>
+  <app-input></app-input>
+  <app-datepicker></app-datepicker>
+  <app-dropdown [options]="attendance_status" label="Status"></app-dropdown>
 </div>
