updates on title section

--- a/src/app/modules/shared/title-section/title-section.component.css
+++ b/src/app/modules/shared/title-section/title-section.component.css
@@ -1,4 +1,11 @@
 .title-container {
- display: flex;
- padding: 2rem 1rem;
+  display: flex;
+  padding: 2.5rem 2rem;
+  align-items: center;
+  gap: 15px;
+}
+
+.divider {
+  border-top: 3px solid var(--primary-500);
+  margin: 0 1rem;
 }
