added form builder on side filter

--- a/src/app/modules/shared/input/input.component.html
+++ b/src/app/modules/shared/input/input.component.html
@@ -1,5 +1,11 @@
 <mat-form-field floatLabel="always">
   <mat-label>{{ label }}</mat-label>
-  <input matInput placeholder="Type Here" autocomplete="off" />
+  <input
+    matInput
+    placeholder="Type Here"
+    autocomplete="off"
+    [(ngModel)]="value"
+    (input)="onInput($event)"
+  />
   <mat-icon *ngIf="suffix_icon.length" matSuffix>{{ suffix_icon }}</mat-icon>
 </mat-form-field>
