--- a/src/app/modules/shared/datepicker/datepicker.component.html
+++ b/src/app/modules/shared/datepicker/datepicker.component.html
@@ -1,7 +1,16 @@
-<mat-form-field>
+<!-- <mat-form-field>
   <mat-label>Choose a date</mat-label>
   <input matInput [matDatepicker]="picker" />
-  <!-- <mat-hint>MM/DD/YYYY</mat-hint> -->
   <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
   <mat-datepicker #picker></mat-datepicker>
+</mat-form-field> -->
+
+<mat-form-field class="form-field">
+  <mat-label>Date Acquired</mat-label>
+  <mat-date-range-input formGroupName="dateRange" [rangePicker]="picker">
+    <input matStartDate  placeholder="Start date" (dateChange)="onStartDateChange($event)"/>
+    <input matEndDate  placeholder="End date" (dateChange)="onEndDateChange($event)"/>
+  </mat-date-range-input>
+  <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+  <mat-date-range-picker #picker></mat-date-range-picker>
 </mat-form-field>
