--- a/src/app/modules/shared/dropdown/dropdown.component.html
+++ b/src/app/modules/shared/dropdown/dropdown.component.html
@@ -1,6 +1,6 @@
 <mat-form-field>
   <mat-label>{{ label }}</mat-label>
-  <mat-select>
+  <mat-select (selectionChange)="onSelectionChange($event)">
     @for (option of options; track option) {
     <mat-option [value]="option">{{ option }}</mat-option>
     }
