--- a/src/app/modules/attendance-user-detail/attendance-user-detail-table/attendance-user-detail-table.component.html
+++ b/src/app/modules/attendance-user-detail/attendance-user-detail-table/attendance-user-detail-table.component.html
@@ -1,11 +1,25 @@
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-  @for(column of displayedColumns; track column;) {
-  <ng-container [matColumnDef]="column">
-    <th mat-header-cell *matHeaderCellDef>{{ column }}</th>
-    <td mat-cell *matCellDef="let element">{{ element[column].schedule }}</td>
-  </ng-container>
-  }
+<div class="table-wrapper">
+  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+    @for(column of displayedColumns; track column;) { @if(column == 'user') {
+    <ng-container [matColumnDef]="column">
+      <th mat-header-cell *matHeaderCellDef>{{ column }}</th>
+      <td mat-cell *matCellDef="let element">
+        <app-info-card title="" [description]="element[column]"></app-info-card>
+      </td>
+    </ng-container>
+    } @else {
+    <ng-container [matColumnDef]="column">
+      <th mat-header-cell *matHeaderCellDef>{{ column }}</th>
+      <td mat-cell *matCellDef="let element">
+        <app-info-card title="Schedule" [description]="element[column].schedule"></app-info-card>
+        @for(break of element[column].breaks; track break) {
+					<app-info-card title="Break" [description]="break"></app-info-card>
+				}
+      </td>
+    </ng-container>
+    } }
 
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-</table>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+  </table>
+</div>
