--- a/src/app/modules/shared/button/button.component.css
+++ b/src/app/modules/shared/button/button.component.css
@@ -7,10 +7,18 @@
   transition: 0.5s ease;
 }
 
+
 .btn-custom.primary {
   border: 1px solid var(--color-border-primary-idle);
   background: var(--color-bg-primary-idle);
-  color: var(--color-text-primary-default);
+  /* color: var(--color-text-primary-default); */
+  color: var(--text);
+}
+
+.btn-custom.success {
+  border: 2px solid var(--color-border-success-idle);
+  background: var(--color-bg-success-idle);
+  color: var(--color-text-success-default);
 }
 
 .btn-custom.sm {
@@ -19,4 +27,11 @@
   padding: 0px 8px;
   font-size: 10px;
   /* line-height: 14px; */
+}
+
+.btn-custom.lg {
+  padding: 0.5rem 2rem;
+  font-size: 1rem;
+  border-radius: 0.5rem;
+  line-height: 2;
 }
