--- a/src/app/modules/shared/badge/badge.component.css
+++ b/src/app/modules/shared/badge/badge.component.css
@@ -13,7 +13,7 @@
 .badge-container.sm {
   padding: 2px 6px;
   font-size: 10px;
-  line-height: 14px;
+  line-height: 10px;
 
   mat-icon {
     height: 10px;
@@ -26,6 +26,19 @@
 .badge-container.md {
   padding: 4px 8px;
   font-size: 12px;
+  line-height: 12px;
+
+  mat-icon {
+    height: 10px;
+    width: 10px;
+    font-size: 10px;
+    line-height: 10px;
+  }
+}
+
+.badge-container.lg {
+  padding: 4px 10px;
+  font-size: 14px;
   line-height: 16px;
 
   mat-icon {
