updates on angular styling, added gray shade

--- a/src/styles.css
+++ b/src/styles.css
@@ -104,6 +104,18 @@
   --warning-900: #7c2d12;
   --warning-950: #431407;
 
+  --gray-50: #f7f7f7;
+  --gray-100: #e1e1e1;
+  --gray-200: #cfcfcf;
+  --gray-300: #b1b1b1;
+  --gray-400: #9e9e9e;
+  --gray-500: #7e7e7e;
+  --gray-600: #626262;
+  --gray-700: #4b4b4b;
+  --gray-800: #2f2f2f;
+  --gray-900: #1a1a1a;
+  --gray-950: #0e0e0e;
+
   /* background */
   --color-bg-disabled: var(--primary-100);
 
@@ -173,4 +185,5 @@ body {
 body {
   margin: 0;
   font-family: Inter, 'Helvetica Neue', sans-serif;
+  font-display: swap;
 }
