--- a/src/app/modules/shared/snackbar/snackbar.component.html
+++ b/src/app/modules/shared/snackbar/snackbar.component.html
@@ -1,7 +1,7 @@
-<!-- <div class="alert-container" [ngClass]="type">
-  <div class="alert-wrapper">
+<div class="snackbar-container" [ngClass]="config.type">
+  <div class="snackbar-wrapper">
     <div class="icon-wrapper" [class.hasHeader]="hasHeader">
-      <mat-icon class="alert-icon">info</mat-icon>
+      <mat-icon class="snackbar-icon">info</mat-icon>
     </div>
 		<div class="content-wrapper">
 			<div class="header" *ngIf="config.header">Test</div>
@@ -9,8 +9,8 @@
 				<li *ngFor="let message of config.message">{{message}}</li>
 			</ul>
 		</div>
-		<mat-icon>close</mat-icon>
+		<mat-icon >close</mat-icon>
   </div>
-</div> -->
+</div>
 
-<span>snackbar works</span>
+<!-- <span>snackbar works</span> -->
