--- a/src/app/modules/attendance/attendance/attendance.component.css
+++ b/src/app/modules/attendance/attendance/attendance.component.css
@@ -21,8 +21,8 @@
 
 .time-detail {
   display: flex;
-  padding: 5px;
-  justify-content: center;
+  padding: 5px 20px;
+  justify-content: space-between;
   align-items: center;
   line-height: normal;
   font-size: 16px;
