--- a/src/styles.css
+++ b/src/styles.css
@@ -1,72 +1,78 @@
 /* You can add global styles to this file, and also import other style files */
 
 :root {
-  --text: #140709;
-  --background: #fcf6f6;
-  --primary: #c25567;
-  --secondary: #98dabf;
-  --accent: #70a5cc;
+    --text: #07040e;
+    --text-white: rgb(248, 246, 253);
+    --bg: #f8f6fd;
+    --primary: #754acd;
+    --secondary: #e397b7;
+    --accent: #d8727d;
+    --textcontrast: #64d97b;
+    --bgcontrast: #64d97b;
+    --primarycontrast: #ffdd00;
+    --secondarycontrast: #64d97b;
+    --accentcontrast: #ffdd00;
 
   /* light shades */
-  --text-50: #f8ecee;
-  --text-100: #f2d9dd;
-  --text-200: #e4b4bb;
-  --text-300: #d78e99;
-  --text-400: #ca6877;
-  --text-500: #bd4255;
-  --text-600: #973544;
-  --text-700: #712833;
-  --text-800: #4b1b22;
-  --text-900: #260d11;
-  --text-950: #130708;
+ --text-50: #efebf9;
+  --text-100: #e0d7f4;
+  --text-200: #c1afe9;
+  --text-300: #a188dd;
+  --text-400: #8260d2;
+  --text-500: #6338c7;
+  --text-600: #4f2d9f;
+  --text-700: #3b2277;
+  --text-800: #281650;
+  --text-900: #140b28;
+  --text-950: #0a0614;
 
-  --background-50: #f9ecec;
-  --background-100: #f2d9d9;
-  --background-200: #e6b3b3;
-  --background-300: #d98c8c;
-  --background-400: #cc6666;
-  --background-500: #bf4040;
-  --background-600: #993333;
-  --background-700: #732626;
-  --background-800: #4d1919;
-  --background-900: #260d0d;
-  --background-950: #130606;
+  --background-50: #efeafa;
+  --background-100: #ded5f6;
+  --background-200: #beabed;
+  --background-300: #9d82e3;
+  --background-400: #7d58da;
+  --background-500: #5c2ed1;
+  --background-600: #4a25a7;
+  --background-700: #371c7d;
+  --background-800: #251254;
+  --background-900: #12092a;
+  --background-950: #090515;
 
-  --primary-50: #f8ecee;
-  --primary-100: #f1dade;
-  --primary-200: #e4b4bc;
-  --primary-300: #d68f9b;
-  --primary-400: #c96979;
-  --primary-500: #bb4458;
-  --primary-600: #963646;
-  --primary-700: #702935;
-  --primary-800: #4b1b23;
-  --primary-900: #250e12;
-  --primary-950: #130709;
+  --primary-50: #f0ebfa;
+  --primary-100: #e1d7f4;
+  --primary-200: #c2afe9;
+  --primary-300: #a487de;
+  --primary-400: #865fd3;
+  --primary-500: #6737c8;
+  --primary-600: #532ca0;
+  --primary-700: #3e2178;
+  --primary-800: #291650;
+  --primary-900: #150b28;
+  --primary-950: #0a0514;
 
-  --secondary-50: #ecf8f3;
-  --secondary-100: #daf1e7;
-  --secondary-200: #b4e4d0;
-  --secondary-300: #8fd6b8;
-  --secondary-400: #69c9a1;
-  --secondary-500: #44bb89;
-  --secondary-600: #36966e;
-  --secondary-700: #297052;
-  --secondary-800: #1b4b37;
-  --secondary-900: #0e251b;
-  --secondary-950: #07130e;
+  --secondary-50: #faebf1;
+  --secondary-100: #f4d7e3;
+  --secondary-200: #eaaec7;
+  --secondary-300: #df86ab;
+  --secondary-400: #d45e8f;
+  --secondary-500: #c93673;
+  --secondary-600: #a12b5c;
+  --secondary-700: #792045;
+  --secondary-800: #51152e;
+  --secondary-900: #280b17;
+  --secondary-950: #14050c;
 
-  --accent-50: #ecf3f8;
-  --accent-100: #dae7f1;
-  --accent-200: #b4d0e4;
-  --accent-300: #8fb8d6;
-  --accent-400: #69a1c9;
-  --accent-500: #4489bb;
-  --accent-600: #366e96;
-  --accent-700: #295270;
-  --accent-800: #1b374b;
-  --accent-900: #0e1b25;
-  --accent-950: #070e13;
+  --accent-50: #faebec;
+  --accent-100: #f4d7da;
+  --accent-200: #e9afb5;
+  --accent-300: #de8790;
+  --accent-400: #d35f6a;
+  --accent-500: #c83745;
+  --accent-600: #a02c37;
+  --accent-700: #78212a;
+  --accent-800: #50161c;
+  --accent-900: #280b0e;
+  --accent-950: #140507;
 
   --success-50: #f3fdf6; /* airy, hint of green */
   --success-100: #e3f5e4; /* light green mist */
