--- a/src/app/modules/shared/info-card/info-card.component.html
+++ b/src/app/modules/shared/info-card/info-card.component.html
@@ -1,4 +1,4 @@
-<div class="info-card-container" [ngClass]="[size, type]">
+<div class="info-card-container" [ngClass]="[size, type, shade]">
   <div class="badge-wrapper">
     <app-badge [size]="size">{{ badge }}</app-badge>
     <span>{{ subDetail }}</span>
