--- a/src/app/modules/attendance/attendance/attendance.component.css
+++ b/src/app/modules/attendance/attendance/attendance.component.css
@@ -3,6 +3,14 @@
   width: 90%;
   padding: 0 5%;
   margin: auto;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  gap: 25px;
+}
+
+h1 {
+  font-size: calc(0.8rem * 1.333);
 }
 
 .greetings {
@@ -16,7 +24,7 @@
   justify-content: center;
   align-items: center;
   gap: 10px;
-  padding: 10px;
+  padding: 25px 15px;
 }
 
 .time-detail {
@@ -27,4 +35,13 @@
   line-height: normal;
   font-size: 16px;
   gap: 15px;
+}
+
+@media screen and (max-width: 420px) {
+  .sec-container {
+    gap: 15px;
+  }
+  .greetings {
+    font-size: 2.8rem;
+  }
 }
