--- a/src/app/modules/shared/header/header.component.css
+++ b/src/app/modules/shared/header/header.component.css
@@ -1,11 +1,9 @@
 #header {
-  background-color: var(--primary)
+  background-color: var(--primary-100);
 }
 
 .header {
-  max-width: 1000px;
-  width: 90%;
-  padding: 0 5%;
+  padding: 0.5rem 7%;
   margin: auto;
   display: flex;
   align-items: center;
@@ -14,23 +12,52 @@
 
 .header .nav-wrapper {
   display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex: 1;
+  .logo-wrapper {
+    display: flex;
+    justify-content: flex-start;
+    gap: 5px;
+    .title {
+      font-size: 1.2rem;
+      font-weight: 500;
+      line-height: 1.5;
+    }
+  }
+}
+
+.spacer {
+  flex: 1 1 auto;
 }
 
 .header .nav-wrapper .navigation {
   display: flex;
+  gap: 35px;
+  padding: 0;
   li {
     list-style: none;
     a {
       font-size: 15px;
-      font-weight: 500;
       text-transform: capitalize;
-      color: wheat;
+      color: var(--text);
       display: block;
       line-height: 1;
-      position: relative;
-      z-index: 1;
-      padding: 16px 24px;
       text-decoration: none;
     }
   }
+}
+
+/* side nav */
+.sidenav-container {
+  overflow-x: hidden;
+  transition: 0.5s;
+  width: 0;
+  position: fixed;
+  right: 0;
+  top: 0;
+}
+
+.sidenav-container.opened {
+  width: 300px;
 }
