added reports to in user model

--- a/src/app/modules/attendance-view/attendance-view-table/attendance-view-table.component.html
+++ b/src/app/modules/attendance-view/attendance-view-table/attendance-view-table.component.html
@@ -9,6 +9,11 @@
       <td mat-cell *matCellDef="let element">{{ element.user }}</td>
     </ng-container>
 
+    <ng-container matColumnDef="reportsTo">
+      <th mat-header-cell *matHeaderCellDef>Reports To</th>
+      <td mat-cell *matCellDef="let element">{{ element.reportsTo }}</td>
+    </ng-container>
+
     <ng-container matColumnDef="timeIn">
       <th mat-header-cell *matHeaderCellDef>Time In</th>
       <td mat-cell *matCellDef="let element">{{ element.timeIn | twelveHourTime }}</td>
