updates on button and input component

--- a/src/app/modules/shared/button/button.component.html
+++ b/src/app/modules/shared/button/button.component.html
@@ -1,3 +1,3 @@
- <button class="btn-custom" [ngClass]="[type, shade, size]"  (click)="onClicked()">
+ <button class="btn-custom" [ngClass]="[type, shade, size, width]"  (click)="onClicked()">
   <ng-content></ng-content>
  </button>
