--- a/src/app/modules/attendance-view/attendance-view/attendance-view.component.html
+++ b/src/app/modules/attendance-view/attendance-view/attendance-view.component.html
@@ -4,7 +4,11 @@
     <app-side-filter></app-side-filter>
   </mat-drawer>
   <mat-drawer-content>
-   <!-- <app-button (btnclicked)="sidenav_opened = !sidenav_opened">Open</app-button> -->
+    <!-- <app-button (btnclicked)="sidenav_opened = !sidenav_opened">Open</app-button> -->
+    @if(isloading) {
+    <app-spinner></app-spinner>
+    }@else {
     <app-attendance-view-table [dataSource]="attendances"></app-attendance-view-table>
+    }
   </mat-drawer-content>
 </mat-drawer-container>
