--- a/src/app/modules/attendance-view/attendance-view/attendance-view.component.html
+++ b/src/app/modules/attendance-view/attendance-view/attendance-view.component.html
@@ -5,7 +5,7 @@
   </mat-drawer>
   <mat-drawer-content>
     <!-- <app-button (btnclicked)="sidenav_opened = !sidenav_opened">Open</app-button> -->
-    @if(isloading) {
+    @if(isloading()) {
     <app-spinner></app-spinner>
     }@else {
     <app-attendance-view-table [dataSource]="attendances"></app-attendance-view-table>
