added status sidefilter

--- a/src/app/modules/attendance-view/attendance-view/attendance-view.component.html
+++ b/src/app/modules/attendance-view/attendance-view/attendance-view.component.html
@@ -1,7 +1,7 @@
 <app-title-section></app-title-section>
 <mat-drawer-container class="sidenav-container">
   <mat-drawer class="custom-sidenav" mode="side" [opened]="sidenav_opened">
-    <app-side-filter></app-side-filter>
+    <app-side-filter [filters]="filter"></app-side-filter>
   </mat-drawer>
   <mat-drawer-content>
     <!-- <app-button (btnclicked)="sidenav_opened = !sidenav_opened">Open</app-button> -->
